--- a/docs/template/game/Game.vcxproj.filters
+++ b/docs/template/game/Game.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Source\Font.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Slime.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\App.h" />
@@ -120,11 +123,14 @@
     <ClInclude Include="Source\Exterior.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Animation.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
     <ClInclude Include="Source\Font.h">
       <Filter>Utils</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Animation.h">
-      <Filter>Utils</Filter>
+    <ClInclude Include="Source\Slime.h">
+      <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
