--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@
 !Game/Source/External/SDL/libx86/SDL2main.lib
 !Game/Source/External/SDL_image/libx86/SDL2_image.lib
 !Game/Source/External/SDL_mixer/libx86/SDL2_mixer.lib
+!Game/Source/External/SDL/libx86/SDL2.lib
+!Game/Source/External/SDL/libx86/SDL2main.lib
+!Game/Source/External/SDL_image/libx86/SDL2_image.lib
+!Game/Source/External/SDL_mixer/libx86/SDL2_mixer.lib
 
 # Executables
 *.exe
@@ -45,6 +49,7 @@ Thumbs.db
 # *.vcproj
 # *.vcxproj*
 # *.sln
+# *.dll
 *.vspscc
 *_i.c
 *.i
